// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Compiler (react) should build the example with config complete.json 1`] = `
Object {
  "1.dcec493612c7ced17846.css": "294e247516d839373ffb20d684cf3db5",
  "1.dcec493612c7ced17846.js": "1e2f939a8e78d13fc3ea3fd744bd8887",
  "240683d2dd7c5a158ee48c70703a2a0a-1200.jpg": "240683d2dd7c5a158ee48c70703a2a0a",
  "3.724e9291ed4ab29de160.js": "2d35d14bde9e55644e181a7615fbe672",
  "5c917367a9adfba3f1e904ed920580be-600.jpg": "5c917367a9adfba3f1e904ed920580be",
  "8f42a999073e8fe5caf83406f0e1d690-1920.jpg": "8f42a999073e8fe5caf83406f0e1d690",
  "c29e3724f0ae14c777b61c09ee20e73b-300.jpg": "c29e3724f0ae14c777b61c09ee20e73b",
  "index.html": "bcd09a41f96db0616a71c9e23dd0c628",
  "main.5d12953204b136405d82.css": "7861def0e3928a6ff8b473840ce73a4e",
  "main.5d12953204b136405d82.js": "742ca09bf2997db4ad3320d35b5aa852",
  "manifest.215bca66937e9ac8a460.js": "ed10f89b267ef6bf7b545310ee973d99",
  "vendors.ee99a0e111454a1372c2.css": "5f622c70ad714c19d4d4ff863401721f",
  "vendors.ee99a0e111454a1372c2.js": "a9416f6aaf23c1e51cb1a13503a11432",
}
`;

exports[`Compiler (react) should build the example with config disabled.json 1`] = `
Object {
  "1.dcec493612c7ced17846.css": "294e247516d839373ffb20d684cf3db5",
  "1.dcec493612c7ced17846.js": "1e2f939a8e78d13fc3ea3fd744bd8887",
  "3.724e9291ed4ab29de160.js": "2d35d14bde9e55644e181a7615fbe672",
  "b02330cbe0a6272c907bdb4e12b97b7c.jpg": "be5bdc38e858972b37353622a1079182",
  "index.html": "8aae0987250457646876e271e4c864c2",
  "main.3d951a173db1d53b305b.css": "7861def0e3928a6ff8b473840ce73a4e",
  "main.3d951a173db1d53b305b.js": "6dfc3f34c0752c2532561dda0cde42ff",
  "manifest.215bca66937e9ac8a460.js": "ed10f89b267ef6bf7b545310ee973d99",
  "vendors.ee99a0e111454a1372c2.css": "5f622c70ad714c19d4d4ff863401721f",
  "vendors.ee99a0e111454a1372c2.js": "a9416f6aaf23c1e51cb1a13503a11432",
}
`;

exports[`Compiler (react) should build the example with config from package.json 1`] = `
Object {
  "1.dcec493612c7ced17846.css": "294e247516d839373ffb20d684cf3db5",
  "1.dcec493612c7ced17846.js": "1e2f939a8e78d13fc3ea3fd744bd8887",
  "240683d2dd7c5a158ee48c70703a2a0a-1200.jpg": "240683d2dd7c5a158ee48c70703a2a0a",
  "3.724e9291ed4ab29de160.js": "2d35d14bde9e55644e181a7615fbe672",
  "5c917367a9adfba3f1e904ed920580be-600.jpg": "5c917367a9adfba3f1e904ed920580be",
  "8f42a999073e8fe5caf83406f0e1d690-1920.jpg": "8f42a999073e8fe5caf83406f0e1d690",
  "bar/index.html": "7cdb518e37f87119f204a3c6826fdb65",
  "c29e3724f0ae14c777b61c09ee20e73b-300.jpg": "c29e3724f0ae14c777b61c09ee20e73b",
  "icon_128x128.deb0a118869f6d69fcc5e9852ad32d81.png": "deb0a118869f6d69fcc5e9852ad32d81",
  "icon_192x192.f5d0f0f2ed01fca7cb69e70f6af11529.png": "f5d0f0f2ed01fca7cb69e70f6af11529",
  "icon_256x256.4661d370dd248c9f9d48e78c8a07776d.png": "4661d370dd248c9f9d48e78c8a07776d",
  "icon_96x96.1c0003f895382900e1a8ce6fa0a1b672.png": "1c0003f895382900e1a8ce6fa0a1b672",
  "index.html": "570dcf7309e120a82f9d1751a4621b41",
  "main.5d12953204b136405d82.css": "7861def0e3928a6ff8b473840ce73a4e",
  "main.5d12953204b136405d82.js": "742ca09bf2997db4ad3320d35b5aa852",
  "manifest.215bca66937e9ac8a460.js": "ed10f89b267ef6bf7b545310ee973d99",
  "manifest.bc9f52edf87c052e960e4516d360c190.json": "bc9f52edf87c052e960e4516d360c190",
  "vendors.ee99a0e111454a1372c2.css": "5f622c70ad714c19d4d4ff863401721f",
  "vendors.ee99a0e111454a1372c2.js": "a9416f6aaf23c1e51cb1a13503a11432",
}
`;

exports[`Compiler (react) should build the example with config image-optimization-disabled.json 1`] = `
Object {
  "1.dcec493612c7ced17846.css": "294e247516d839373ffb20d684cf3db5",
  "1.dcec493612c7ced17846.js": "1e2f939a8e78d13fc3ea3fd744bd8887",
  "3.724e9291ed4ab29de160.js": "2d35d14bde9e55644e181a7615fbe672",
  "b02330cbe0a6272c907bdb4e12b97b7c.jpg": "be5bdc38e858972b37353622a1079182",
  "index.html": "39109fd7d72878b6fa9b33aa9d11085c",
  "main.3d951a173db1d53b305b.css": "7861def0e3928a6ff8b473840ce73a4e",
  "main.3d951a173db1d53b305b.js": "6dfc3f34c0752c2532561dda0cde42ff",
  "manifest.215bca66937e9ac8a460.js": "ed10f89b267ef6bf7b545310ee973d99",
  "vendors.ee99a0e111454a1372c2.css": "5f622c70ad714c19d4d4ff863401721f",
  "vendors.ee99a0e111454a1372c2.js": "a9416f6aaf23c1e51cb1a13503a11432",
}
`;

exports[`Compiler (react) should build the example with config manifest.json 1`] = `
Object {
  "1.dcec493612c7ced17846.css": "294e247516d839373ffb20d684cf3db5",
  "1.dcec493612c7ced17846.js": "1e2f939a8e78d13fc3ea3fd744bd8887",
  "3.724e9291ed4ab29de160.js": "2d35d14bde9e55644e181a7615fbe672",
  "b02330cbe0a6272c907bdb4e12b97b7c.jpg": "be5bdc38e858972b37353622a1079182",
  "icon_128x128.deb0a118869f6d69fcc5e9852ad32d81.png": "deb0a118869f6d69fcc5e9852ad32d81",
  "icon_192x192.f5d0f0f2ed01fca7cb69e70f6af11529.png": "f5d0f0f2ed01fca7cb69e70f6af11529",
  "icon_256x256.4661d370dd248c9f9d48e78c8a07776d.png": "4661d370dd248c9f9d48e78c8a07776d",
  "icon_96x96.1c0003f895382900e1a8ce6fa0a1b672.png": "1c0003f895382900e1a8ce6fa0a1b672",
  "index.html": "bddbba89d290f0f68f34d863d2a49cf4",
  "main.3d951a173db1d53b305b.css": "7861def0e3928a6ff8b473840ce73a4e",
  "main.3d951a173db1d53b305b.js": "6dfc3f34c0752c2532561dda0cde42ff",
  "manifest.215bca66937e9ac8a460.js": "ed10f89b267ef6bf7b545310ee973d99",
  "manifest.bc9f52edf87c052e960e4516d360c190.json": "bc9f52edf87c052e960e4516d360c190",
  "vendors.ee99a0e111454a1372c2.css": "5f622c70ad714c19d4d4ff863401721f",
  "vendors.ee99a0e111454a1372c2.js": "a9416f6aaf23c1e51cb1a13503a11432",
}
`;

exports[`Compiler (react) should build the example with config prerender-disabled.json 1`] = `
Object {
  "1.dcec493612c7ced17846.css": "294e247516d839373ffb20d684cf3db5",
  "1.dcec493612c7ced17846.js": "1e2f939a8e78d13fc3ea3fd744bd8887",
  "240683d2dd7c5a158ee48c70703a2a0a-1200.jpg": "240683d2dd7c5a158ee48c70703a2a0a",
  "3.724e9291ed4ab29de160.js": "2d35d14bde9e55644e181a7615fbe672",
  "5c917367a9adfba3f1e904ed920580be-600.jpg": "5c917367a9adfba3f1e904ed920580be",
  "8f42a999073e8fe5caf83406f0e1d690-1920.jpg": "8f42a999073e8fe5caf83406f0e1d690",
  "c29e3724f0ae14c777b61c09ee20e73b-300.jpg": "c29e3724f0ae14c777b61c09ee20e73b",
  "index.html": "a87040728cc42f90a4640592169c8fb5",
  "main.5d12953204b136405d82.css": "7861def0e3928a6ff8b473840ce73a4e",
  "main.5d12953204b136405d82.js": "742ca09bf2997db4ad3320d35b5aa852",
  "manifest.215bca66937e9ac8a460.js": "ed10f89b267ef6bf7b545310ee973d99",
  "vendors.ee99a0e111454a1372c2.css": "5f622c70ad714c19d4d4ff863401721f",
  "vendors.ee99a0e111454a1372c2.js": "a9416f6aaf23c1e51cb1a13503a11432",
}
`;
